Улучшение диалога и поиска

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ TMDB_API_KEY=c508feff59aae79fd7942a89c6bf479a
 OMDB_API_KEY=18cd0ea3
 KINOPOISK_API_KEY=3M70PYM-Y8W42BT-HZ3EV42-DA7V6KZ
 
+USE_TMDB=false
 TMDB_HTTP_PROXY=http://5.75.158.114:8080
 TMDB_HTTPS_PROXY=http://45.22.209.157:8888
 
@@ -16,3 +17,11 @@ QWEN_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 ENABLE_DEEPSEEK=false
 DEEPSEEK_API_KEY=sk-cd3d68e8821f49d0a6bbde3df3d92621
 DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+
+FLASK_SECRET_KEY=a1b2c3d4e5f678901234567890abcdef1234567890ab
+
+# Минимальное число голосов для надёжного рейтинга
+MIN_VOTES_IMDB=500
+MIN_VOTES_KP=200
+
+TELEGRAM_BOT_TOKEN=8425493712:AAGt06wty7AqDaGdnTrYVMS3A-pd05BKMf0
